Rename home page constants

--- a/html/home.html
+++ b/html/home.html
@@ -9,11 +9,11 @@
 </style>
 <body>
     <div>
-        <p>{{.HomeMessageWelcome}}</p>
-        <p>{{.HomeMessageInstructions}}</p>
+        <p>{{.MessageWelcome}}</p>
+        <p>{{.MessageInstructions}}</p>
         <button type=“button”><a href={{.AddressNewPlan}}>
-            {{.HomeButtonOptionsNewPlan}}</a></button>
+            {{.ButtonOptionsNewPlan}}</a></button>
         <button type=“button”><a href={{.AddressNewRecipe}}>
-            {{.HomeButtonOptionsNewRecipe}}</a></button>
+            {{.ButtonOptionsNewRecipe}}</a></button>
     </div>
 </body>
