Implement basic nav bar

--- a/html/newRecipe.html
+++ b/html/newRecipe.html
@@ -8,6 +8,10 @@
     .mySlides {display: none}
 </style>
 <body>
+    <div class="topnav">
+        <a class="active" href={{.AddressHome}}>{{.NavHome}}</a>
+      </div> 
+
     <div>
         <p>{{.MessageNewRecipe}}</p>
     </div>
