--- a/html/newRecipe.html
+++ b/html/newRecipe.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>New Recipe</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <style>
     body {font-family: "Lato", sans-serif}
     .mySlides {display: none}
 </style>
 <body>
-    <div class="topnav">
-        <a class="active" href={{.AddressHome}}>{{.NavHome}}</a>
-      </div> 
+    <header id="top">
+        <span id="title">
+            {{.Title}}
+        </span>
+        <nav>
+            <a href={{.AddressHome}}>{{.NavHome}}</a>
+        </nav>
+        <div></div>
+    </header>
 
     <div>
         <p>{{.MessageNewRecipe}}</p>
