--- a/html/newRecipe.html
+++ b/html/newRecipe.html
@@ -13,7 +13,7 @@
             {{.Title}}
         </span>
         <nav>
-            <a href={{.AddressHome}}>{{.NavHome}}</a>
+            <a href={{.AddressIndex}}>{{.NavIndex}}</a>
         </nav>
         <div></div>
     </header>
