Implement display meal plan in New Meal Plan page as element in HTML, passed as struct property by handler

--- a/html/newMealPlan.html
+++ b/html/newMealPlan.html
@@ -20,5 +20,6 @@
     </header>
     <header id="title-block-header">
         <h1 class=title>{{.TitlePage}}</h1>
+        <p class=plan>{{.MealPlan}}</p>
     </header>
 </body>
