--- a/html/newMealPlan.html
+++ b/html/newMealPlan.html
@@ -20,6 +20,7 @@
     </header>
     <header id="title-block-header">
         <h1 class=title>{{.TitlePage}}</h1>
-        <p class=plan>{{.MealPlan}}</p>
+        {{range .MealPlan}} <p>{{.}}</p> {{end}}
+        {{range .MealPlanString}} <p>{{.}}</p> {{end}}
     </header>
 </body>
