Remove unused constants; add new constants for new meal plan messages

--- a/html/newMealPlan.html
+++ b/html/newMealPlan.html
@@ -20,6 +20,7 @@
     </header>
     <header id="title-block-header">
         <h1 class=title>{{.TitlePage}}</h1>
+        <p>{{.DurationMealPlan}}</p>
         {{range .MealPlan}} <p>{{.}}</p> {{end}}
         {{range .MealPlanString}} <p>{{.}}</p> {{end}}
     </header>
